--- a/4_show_me_the_code/index.css
+++ b/4_show_me_the_code/index.css
@@ -1,16 +1,27 @@
-.header{
-    display: flex;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.logo{
-    width: 200px;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
-.nav-items > ul{
-    display: flex;
+.logo {
+  width: 150px;
 }
 
-.nav-items > ul > li{
-    padding: 10px;
-    margin: 10px;
+.nav-items > ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
 }
