--- a/4_show_me_the_code/index.css
+++ b/4_show_me_the_code/index.css
@@ -25,3 +25,37 @@
   padding: 10px;
   margin: 10px;
 }
+
+.search{
+    padding: 10px;
+}
+
+.res-card{
+    width: 250px;
+    height: 350px;
+    background-color: #f0f0f093;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+
+.res-card:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    cursor: pointer;
+}
+
+.res-logo{
+    width: 100%;
+    height: 70%;
+}
+
+.res-details{
+    height: 30%;
+    width: 100%;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
