--- a/4_show_me_the_code/index.css
+++ b/4_show_me_the_code/index.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     margin: 5px;
+    border-radius: 0.2em;
 }
 
 .res-card:hover{
@@ -48,6 +49,7 @@
 .res-logo{
     width: 100%;
     height: 70%;
+    border-radius: 0.2em;
 }
 
 .res-details{
