--- a/4_show_me_the_code/index.css
+++ b/4_show_me_the_code/index.css
@@ -4,12 +4,19 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 .logo {
@@ -26,38 +33,70 @@
   margin: 10px;
 }
 
-.search{
-    padding: 10px;
+.search {
+  padding: 10px;
 }
 
-.res-card{
-    width: 250px;
-    height: 350px;
-    background-color: #f0f0f093;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    margin: 5px;
-    border-radius: 0.2em;
+.res-card {
+  width: 273px;
+  height: 284px;
+  background-color: #f0f0f093;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  border-radius: 0.2em;
+  transition: transform 0.15s ease, box-shadow 0.15s ease;
+  gap: 0.5em;
 }
 
-.res-card:hover{
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    cursor: pointer;
+.res-card:hover {
+  transform: scale(0.95);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  cursor: pointer;
 }
 
-.res-logo{
-    width: 100%;
-    height: 70%;
-    border-radius: 0.2em;
+.res-logo {
+  width: 100%;
+  height: 182px;
+  border-radius: 1em;
+  object-fit: cover;
 }
 
-.res-details{
-    height: 30%;
-    width: 100%;
+.res-details {
+  height: 30%;
+  width: 100%;
+  font-weight: 400;
+  padding: 0 0.5em;
+  display: flex;
+  flex-direction: column;
 }
 
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1143px;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.res-name {
+  font-weight: 600;
+  font-size: 1.08em;
+}
+
+.res-rating-time-div {
+  font-weight: 500;
+  font-size: 0.98em;
+}
+
+.res-cuisine {
+  font-size: 0.95em;
+  color: rgba(40, 37, 37, 0.659);
 }
