--- a/4_show_me_the_code/index.css
+++ b/4_show_me_the_code/index.css
@@ -68,9 +68,10 @@ body {
   height: 30%;
   width: 100%;
   font-weight: 400;
-  padding: 0 0.5em;
+  padding: 0 0.6em;
   display: flex;
   flex-direction: column;
+  font-size: 15px;
 }
 
 .res-container {
