--- a/6_exploring_the_world/index.css
+++ b/6_exploring_the_world/index.css
@@ -112,6 +112,7 @@ body {
   display: flex;
   max-width: 1143px;
   width: 100%;
+  height: 3.5em;
   justify-content: center;
   gap: 2em;
   align-items: center;
@@ -127,4 +128,62 @@ body {
   cursor: pointer;
   color: #ffffff;
   font-weight: 600;
+}
+
+.shimmer-body{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 6em;
+}
+
+.shimmer-container{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1143px;
+  margin-top: 3.5em;
+}
+
+.shimmer-card{
+  width: 273px;
+  height: 284px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  border-radius: 1.5em;
+  transition: transform 0.15s ease, box-shadow 0.15s ease;
+  gap: 0.5em;
+}
+
+.shimmer-card-image{
+  width: 100%;
+  height: 65%;
+  border-radius: 1em;
+  object-fit: cover;
+  background-color: #eef0f5;
+}
+
+.shimmer-card-details{
+  height: 30%;
+  width: 100%;
+  font-weight: 400;
+  padding: 0 0.6em;
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  gap: 0.5em;
+}
+
+.shimmer-card-detail-1{
+  width: 70%;
+  height: 1.2em;
+  background-color: #eef0f5;
+}
+
+.shimmer-card-detail-2{
+  width: 50%;
+  height: 1.2em;
+  background-color: #eef0f5;
 }
