--- a/7_finding_the_path/index.css
+++ b/7_finding_the_path/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
