--- a/7_finding_the_path/index.css
+++ b/7_finding_the_path/index.css
@@ -23,8 +23,6 @@ body {
   padding: 0.9em 10%;
   box-shadow: rgba(138, 137, 137, 0.1) 0px 10px 10px;
   position: fixed;
-  background-color: #ffffff;
-  position: fixed;
   top: 0;
   left: 0;
   background-color: white;
@@ -238,4 +236,62 @@ body {
 
 .search-input:focus {
   outline: #ffffff;
+}
+
+.restaurant-menu-wrapper{
+  background-color: aqua;
+  margin-top: 7em;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.restaurant-menu-top-div{
+  display: flex;
+  background-color: antiquewhite;
+  flex-direction: column;
+  max-width: 800px;
+  width: 100%;
+  padding: 1em;
+  gap: 1em;
+  border-radius: 1rem;
+}
+
+.restaurant-menu-name{
+  font-weight: 800;
+  font-size: 24px;
+  letter-spacing: -0.4px;
+}
+
+.restaurant-menu-details{
+  display: flex;
+  flex-direction: column;
+  border: 2px solid black;
+  padding: 1em;
+  border-radius: 1rem;
+  gap: 0.2rem;
+}
+
+.restaurant-menu-rating{
+  font-weight: 600;
+}
+
+.restaurant-menu-cuisines{
+  font-weight: 600;
+  color: #ff5c1c;
+  text-decoration-line:underline;
+  font-size: 15px;
+}
+
+.restaurant-menu-time{
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.restaurant-menu-distance-fee{
+  color: #02060c99;
+  font-size: 14px;
 }
