--- a/7_finding_the_path/index.css
+++ b/7_finding_the_path/index.css
@@ -120,16 +120,15 @@ body {
 }
 
 .filter-btn {
-  border: none;
   padding: 0.5em;
-  height: 50%;
   border-radius: 0.3em;
-  background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
-
   cursor: pointer;
-  color: #7e7873cb;
   font-weight: 600;
+  border-radius: 18px;
+  color: rgba(2, 6, 12, 0.75);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(226, 226, 231);
+  box-shadow: rgba(2, 6, 12, 0.04) 0px 2px 12px;
 }
 
 .shimmer-body {
@@ -214,12 +213,12 @@ body {
   border: none;
   padding: 0.5em;
   height: 50%;
-  border-radius: 0.3em;
-  background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  border-radius: 2em;
   cursor: pointer;
-  color: #7e7873cb;
   font-weight: 600;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(226, 226, 231);
+  box-shadow: rgba(2, 6, 12, 0.04) 0px 2px 12px;
 }
 
 .search-input {
@@ -227,11 +226,12 @@ body {
   height: 100%;
   border: none;
   padding: 0.5em 1em;
-  border-radius: 0.3em;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  color: #585c65;
+  border-radius: 2em;
   letter-spacing: 0.1em;
+  color: rgba(2, 6, 12, 0.75);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(226, 226, 231);
+  box-shadow: rgba(2, 6, 12, 0.04) 0px 2px 12px;
 }
 
 .search-input:focus {
@@ -341,6 +341,8 @@ body {
 }
 
 .restaurant-menu-card-veg-nonveg {
+  width: 20px;
+  height: 20px;
 }
 
 .restaurant-menu-card-name {
@@ -393,4 +395,18 @@ body {
   height: 40px;
   width: 120px;
   box-shadow: rgba(40, 44, 63, 0.08) 0px 3px 8px;
+}
+
+.restaurant-menu-distance-fee-image {
+  height: 20px;
+  width: 25px;
+  margin-bottom: -4px;
+  margin-right: 3px;
+}
+
+.restaurant-menu-rating-icon {
+  height: 20px;
+  width: 20px;
+  margin-bottom: -4px;
+  margin-right: 3px;
 }
