--- a/9_optimising_our_app/index.css
+++ b/9_optimising_our_app/index.css
@@ -493,3 +493,37 @@ body {
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   user-select: none;
 }
+
+.offline-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.offline-div {
+  display: flex;
+  flex-direction: column;
+  max-width: 700px;
+  width: 100%;
+  max-height: 150px;
+  background-color: #e1e1e13a;
+  padding: 2rem 2rem;
+  gap: 1rem;
+  border-radius: 1rem;
+}
+
+.offline-text-1 {
+  font-weight: 600;
+  font-size: 30px;
+  color: #525252e4;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.147);
+  padding-bottom: 0.1rem;
+}
+
+.offline-text-2 {
+  font-weight: 400;
+  font-size: 14px;
+  color: #525252ec;
+}
