--- a/9_optimising_our_app/index.css
+++ b/9_optimising_our_app/index.css
@@ -199,6 +199,10 @@ body {
   color: #ff5c1c;
   font-weight: 600;
   font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2rem;
 }
 
 .search {
