--- a/12_lets_build_our_store/index.css
+++ b/12_lets_build_our_store/index.css
@@ -621,3 +621,11 @@ body {
   gap: 1rem;
   padding: 0 1rem 0 1rem;
 }
+
+.empty-cart-msg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
